# k-stt-typer

./:    .gitignore  CONTRIBUTING.ko.md  CONTRIBUTING.md  LICENSE  MODELS.ko.md  MODELS.md  README.ko.md  README.md  STARTUP.ko.md  STARTUP.md  install.sh  install_whisper.sh  main.py  main_whisper.py  pyproject.toml  setup_global_hotkey.sh  stop_all.sh  switch_model.sh  toggle_stt.sh  toggle_whisper.sh  whisper_transcriber.py
.github/: FUNDING.yml
